--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
 $c-gray: #eee;
+$red-color: rgba(249, 81, 46, 1);
+$white-color: rgba(255, 255, 255, 1);
+$black-color: rgba(28, 26, 38, 1);
+$gray-color: rgba(127, 128, 150, 1);
