--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
+@import url(blocks/page.scss);
+@import url(blocks/header.scss);
+@import url(blocks/icon.scss);
+@import url(blocks/menu.scss);
+@import url(blocks/nav.scss);
+@import url(blocks/top-bar.scss);
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
