fix lint errors

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -11,6 +11,7 @@
   &__slogan {
     margin-top: 32px;
     margin-left: 16px;
+
     font-size: 16px;
     font-weight: 400;
     text-align: center;
@@ -19,15 +20,15 @@
   &__title {
     margin: 0;
     margin-top: 20px;
+
     font-size: 64px;
+    line-height: 85%;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: -0.05em;
-    line-height: 85%;
 
     @media (min-width: 576px) {
       font-size: 80px;
-      // color: green;
     }
   }
 
@@ -43,11 +44,11 @@
   }
 
   &__button {
-    background-image: url(../../images/Button.png);
     width: 288px;
     height: 56px;
     border: none;
-    background-color: #EEF7FF;
+
+    background-color: #eef7ff;
+    background-image: url(../../images/Button.png);
   }
 }
-
