--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,10 +3,10 @@
 @import 'typography'; */
 
 .page {
-  background: #EEF7FF;
   font-family: Inter, sans-serif;
   font-size: 16px;
   font-weight: 400;
+  background: #eef7ff;
 
   &__body {
     margin: 0;
@@ -14,15 +14,13 @@
 
   &__menu {
     position: fixed;
-    left: 0;
     top: 0;
     right: 0;
+    left: 0;
 
-      &:target {
-      opacity: 1;
+    &:target {
       pointer-events: all;
+      opacity: 1;
     }
   }
 }
-
-
