--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,9 +1,8 @@
 .menu {
-  background-color: #EEF7FF;
-  height: 100vh;
-
-  opacity: 0;
   pointer-events: none;
+  height: 100vh;
+  opacity: 0;
+  background-color: #eef7ff;
 
   &__logo {
     padding: 16px;
@@ -18,4 +17,3 @@
   //   position: relative;
   // }
 }
-
