--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,9 @@
-@import url(blocks/page.scss);
-@import url(blocks/header.scss);
-@import url(blocks/icon.scss);
-@import url(blocks/menu.scss);
-@import url(blocks/nav.scss);
-@import url(blocks/top-bar.scss);
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/icon';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/top-bar';
 @import 'utils';
 @import 'fonts';
 @import 'typography';
