--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -26,6 +26,8 @@
   }
 
   &__categories {
+    display: block;
+
     margin-bottom: 16px;
 
     font-family: Inter, sans-serif;
@@ -33,8 +35,19 @@
     font-weight: 400;
     line-height: 150%;
     color: #fff;
+    text-decoration: none;
     letter-spacing: -1%;
+
+    transition:
+      color 0.3s ease,
+      transform 0.3s ease;
+
+    &:hover {
+      transform: translateX(4px);
+      color: #f9512e;
+    }
   }
+
   &__tittle {
     font-family: Inter, sans-serif;
     font-size: 48px;
