--- a/src/styles/blocks/mains.scss
+++ b/src/styles/blocks/mains.scss
@@ -16,6 +16,7 @@
   &--about__product {
     grid-column: 1 / -1;
 
+    margin: 0;
     margin-bottom: 16px;
 
     font-family: Inter, sans-serif;
@@ -64,6 +65,8 @@
     }
   }
   &__product {
+    cursor: pointer;
+
     display: flex;
     grid-column: 1 / -1;
     flex-direction: column;
@@ -71,6 +74,12 @@
 
     height: 100%;
     margin-bottom: 56px;
+
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(0.95);
+    }
 
     @include on-tablet {
       grid-column: span 4;
@@ -155,6 +164,8 @@
     letter-spacing: 2%;
   }
   &__h3 {
+    margin-bottom: 8px;
+
     font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 500;
