--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/top-bar';
+@import './blocks/page';
+@import './blocks/icons';
+@import './blocks/body';
+@import './blocks/main';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/hero-block';
+@import './blocks/_products/products';
+@import './blocks/_products/product__card';
+@import './blocks/about-us';
+@import './blocks/footer';
+@import './blocks/theme-switcher';
