--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,56 @@
 %h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 64px;
+  color: $accent-orange;
+  line-height: 85%;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+  text-align: center;
+
+  margin: 0;
+
+  @include on-tablet {
+    font-size: 80px;
+  }
+
+  @include on-desktop {
+    font-size: 144px;
+  }
+}
+
+%h2 {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48;
+  color: $accent-orange;
+  line-height: 85%;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+
+  margin: 0;
+
+  @include on-tablet {
+    font-size: 56px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+  }
+}
+
+%p {
+  margin: 0;
+}
+
+%a {
+  text-decoration: none;
+}
+
+%ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
