--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$design-min-width: 1440px;
+$light-blue-theme: #eef7ff;
+$light-pink-theme: #ffeefc;
+$main-black: #1c1a26;
+$accent-orange: #f9512e;
+$main-grey: #7f8096;
+$main-white: #fff;
+$button-focused: #b2341a;
+$main-time-duration: 0.3s;
