--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -6,6 +6,7 @@
 }
 
 @mixin transition($properties, $duration: 0.3s, $easing: ease) {
+  // stylelint-disable-next-line scss/no-global-function-names
   transition: #{list.join($properties, ', ')};
   transition-duration: $duration;
   transition-timing-function: $easing;
