--- a/src/styles/blocks/_hero-block.scss
+++ b/src/styles/blocks/_hero-block.scss
@@ -107,6 +107,12 @@
     cursor: pointer;
 
     &__icon {
+      width: 24px;
+      height: 24px;
+      display: inline-block;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
       background-image: url(/src/images/icons/button-cookie.svg);
     }
 
