--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,67 @@
 @mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+  transition: #{$_property} $main-time-duration;
   &:hover {
     #{$_property}: $_toValue;
+  }
+}
+
+@mixin transition($properties, $duration: $main-time-duration, $easing: ease) {
+  // stylelint-disable-next-line scss/no-global-function-names
+  transition: #{join($properties, ', ')};
+  transition-duration: $duration;
+  transition-timing-function: $easing;
+}
+
+@mixin on-tablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin on-design {
+  @media (min-width: $design-min-width) {
+    @content;
+  }
+}
+
+@mixin content-padding-inline() {
+  padding-inline: 16px;
+
+  @include on-tablet {
+    padding-inline: 44px;
+  }
+
+  @include on-design {
+    max-width: 1200px;
+    margin-inline: auto;
+    padding-inline: 124px;
+  }
+}
+
+@mixin page-grid {
+  --columns: 2;
+
+  display: grid;
+  column-gap: 16px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include on-tablet {
+    column-gap: 24px;
+
+    --columns: 8;
+  }
+
+  @include on-desktop {
+    --columns: 8;
+  }
+
+  @include on-design {
+    --columns: 8;
   }
 }
