--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'page';
+@import 'header-blocks/header';
+@import 'header-blocks/top-bar';
+@import 'header-blocks/nav';
+@import 'menu-blocks/menu';
+@import 'main-blocks/main-block';
+@import 'main-blocks/section-production';
+@import 'main-blocks/product';
+@import 'main-blocks/section-about-us';
+@import 'main-blocks/date';
+@import 'footer-blocks/footer';
+@import 'footer-blocks/socials';
 
 body {
   background: $c-gray;
+}
+
+* {
+  outline: 1px solid red;
+  box-sizing: border-box;
 }
