--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,35 @@
 %h1 {
-  font-family: Roboto, sans-serif;
+  font-family: Inter, sans-serif;
   font-weight: 400;
+  font-size: 64px;
+  line-height: 85%;
+  letter-spacing: -5%;
+  text-transform: uppercase;
+  color: $main-text-color;
+
+  @include on-tablet {
+    font-size: 80px;
+  }
+
+  @include on-desktop {
+    font-size: 144px;
+  }
+}
+
+%h2 {
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 85%;
+  letter-spacing: -5%;
+  text-transform: uppercase;
+  color: $main-text-color;
+
+  @include on-tablet {
+    font-size: 56px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+  }
 }
