--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,4 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/icons';
+@import 'blocks/vars';
