--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,9 +1,10 @@
+@use '../utils/mixins' as *;
+
 .header {
   min-width: 280px;
+  height: 200px;
   border: 1px solid black;
-  display: grid;
-  grid-template-columns: repeat(2, 136px);
-  gap: 0 16px;
-  min-height: 600px;
-  justify-content: center; 
+  justify-content: center;
+
+  @include grid;
 }
