--- a/src/styles/blocks/_body.scss
+++ b/src/styles/blocks/_body.scss
@@ -1,4 +1,5 @@
 @use '../utils/vars' as *;
+@use '../utils/mixins' as *;
 
 html {
   box-sizing: border-box;
@@ -11,6 +12,16 @@ body {
   font-family: Roboto, Arial, Helvetica, sans-serif;
   width: 100vw;
   min-height: 100vh;
-  padding: 0 20px;
+  padding: 0 16px;
+  padding-top: 64px;
+
   box-sizing: border-box;
+
+  @include for-tablet {
+    padding: 0 44px;
+  }
+
+  @include for-desktop {
+    padding: 0 44px;
+  }
 }
