--- a/src/main.scss
+++ b/src/main.scss
@@ -8,6 +8,10 @@
 
 // body
 @use './styles/blocks/body' as *;
+@use './styles/blocks/text' as *;
+@use './styles/blocks/title' as *;
+@use './styles/blocks/image' as *;
+@use './styles/blocks/button' as *;
 
 // navigation
 @use './styles/blocks/navigation' as *;
