--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,10 +1,24 @@
 @use '../utils/mixins' as *;
 
 .header {
+  @include grid;
+  
   min-width: 280px;
-  height: 200px;
-  border: 1px solid black;
   justify-content: center;
 
-  @include grid;
+  &__text {
+    grid-column: 1/ -1;
+  }
+
+  &__title {
+    grid-column: 1 / -1;
+  }
+
+  &__image {
+    grid-column: 1/ -1;
+  }
+
+  &__button {
+    grid-column: 1/ -1;
+  }
 }
