--- a/src/main.scss
+++ b/src/main.scss
@@ -17,6 +17,10 @@
 @use './styles/blocks/navigation' as *;
 @use './styles/blocks/navigation-logo' as *;
 @use './styles/blocks/navigation-burger' as *;
+@use './styles/blocks/navigation-close' as *;
 
 // header
 @use './styles/blocks/header' as *;
+
+// menu
+@use './styles/blocks/menu' as *;
