--- a/src/styles/blocks/_navigation.scss
+++ b/src/styles/blocks/_navigation.scss
@@ -2,7 +2,7 @@
 @use '../utils/mixins' as *;
 
 .navigation {
-  position: fixed; // zamiast absolute
+  position: absolute; // zamiast absolute
   top: 0;
   left: 0;
   right: 0;
@@ -11,7 +11,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 16px;
-  z-index: 1000;
 
   @include for-tablet {
     height: 88px;
