menu ,linkg, header done

--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -6,11 +6,13 @@
   z-index: 1000;
   background-color: white;
 
-  display: block;
+  display: flex;
   transform: translate(-100%);
   transition: transform 0.3s ease-in-out;
   min-height: 100vh;
   overflow-y: auto;
+  justify-content: center;
+  align-items: center;
 
   &:target {
     transform: translateY(0);
