--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -30,17 +30,18 @@
   line-height: 1.5;
   margin-bottom: 24px;
   font-weight: 400;
+  letter-spacing: -0.01em;
 
   @media (min-width: 640px) {
     // grid-column: span 4;
-    font-size: 20px;
+    // font-size: 20px;
     max-width: 260px;
     line-height: 1.3;
   }
 
   @media (min-width: 1024px) {
     // grid-column: span 2;
-    font-size: 24px;
+    // font-size: 24px;
     max-width: 280px;
   }
 }
@@ -61,7 +62,7 @@
 
   @media (min-width: 1024px) {
     background-image: url(../images/cookie-big.png);
-    margin-top: -100px;
+    margin-top: -130px;
     background-size: 544px 546px;
   }
 }
@@ -123,8 +124,9 @@
 
   @media (min-width: 1024px) {
     grid-column: span 2;
-    justify-self: start;
-    margin-top: -250px;
+    justify-self: left;
+    margin-left: -3px;
+    margin-top: -200px;
   }
 
   &:hover {
