--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -72,7 +72,7 @@
   font-family: Inter, sans-serif;
   font-weight: 500;
   color: #7f8096;
-  letter-spacing: 0.02em;
+  letter-spacing: -0.02em;
   line-height: 100%;
   text-transform: uppercase;
 }
@@ -80,11 +80,13 @@
 .footer-mail,
 .footer-phone {
   text-decoration: none;
+  line-height: 100%;
+  letter-spacing: -0.02em;
 }
 
 .footer__title-menu {
   @media (min-width: 1024px) {
-    padding-top: 60px;
+    padding-top: 20px;
   }
 }
 
