--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -37,9 +37,10 @@
 }
 
 .products__cards {
-  display: block;
-
-  align-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
   margin: 0 auto;
 
   @media (min-width: 640px) {
@@ -57,7 +58,7 @@
     place-self: start center;
   }
 
-  @media (min-width: 1200) {
+  @media (min-width: 1200px) {
     row-gap: 80px;
   }
 }
