--- a/src/index.scss
+++ b/src/index.scss
@@ -25,3 +25,7 @@
 // menu
 @use './styles/blocks/menu' as *;
 @use './styles/blocks/links' as *;
+
+// main
+@use './styles/blocks/main' as *;
+@use './styles/blocks/products' as *;
