--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -25,4 +25,27 @@
       color: $accent-Orange;
     }
   }
+
+  &__product {
+    display: flex;
+    width: 84;
+    height: 32;
+    gap: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    align-items: center;
+
+    &--icon {
+      width: 16px;
+    }
+
+    &--text {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 100%;
+      letter-spacing: 2%;
+      text-transform: uppercase;
+      color: #f9512e;
+    }
+  }
 }
