--- a/src/styles/blocks/_image.scss
+++ b/src/styles/blocks/_image.scss
@@ -1,5 +1,16 @@
+@use "../utils/mixins" as *;
+
 .image {
   &__header {
     justify-self: center;
+  }
+
+  &__main {
+    width: 288px;
+    height: 356px;
+    border-radius: 8px;
+    background-size: contain;
+
+    
   }
 }
