--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -8,4 +8,21 @@
     text-transform: uppercase;
     padding-top: 32px;
   }
+
+  &__main {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 85%;
+    letter-spacing: -5%;
+    text-transform: uppercase;
+  }
+
+  &__product {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    letter-spacing: 2%;
+    text-transform: uppercase;
+    color: #7F8096;
+  }
 }
