--- a/src/styles/blocks/_text.scss
+++ b/src/styles/blocks/_text.scss
@@ -7,4 +7,22 @@
     text-align: center;
     padding-top: 32px;
   }
+
+  &__main {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: -1%;
+    text-align: start;
+    white-space: normal;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  }
+
+  &__product {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: -1%;
+  }
 }
