--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -74,14 +74,14 @@
 
   @media (min-width: 640px) {
     height: 560px;
-    width: 328px;
+    width: 100%;
     padding: 0;
     grid-column: span 4;
   }
 
   @media (min-width: 1024px) {
     height: 648px;
-    width: 402px;
+    width: 100%;
     grid-column: span 3;
 
     &:nth-child(4n-1) {
@@ -95,7 +95,7 @@
 
   @media (min-width: 1200px) {
     height: 696px;
-    width: 432px;
+    width: 100%;
   }
 }
 
