--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,7 +2,8 @@
   display: block;
   background-color: #1c1a26;
   width: 100%;
-  padding: 60px 16px;
+  padding: 60px 0;
+  margin: 0;
 }
 
 .footer__logo {
@@ -14,6 +15,7 @@
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 16px;
 
   @media (min-width: 640px) {
     display: grid;
