--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -75,6 +75,9 @@
 
 .top-bar__title {
   font-size: 16px;
+  font-weight: 400;
+  letter-spacing: -0.01em;
+  line-height: 150%;
 
   &:hover {
     transform: scale(1.05);
