footer without icons and bottom next

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,3 +29,9 @@
 // main
 @use './styles/blocks/main' as *;
 @use './styles/blocks/products' as *;
+
+// about us section
+@use './styles/blocks/section-about-us' as *;
+
+// footer
+@use './styles/blocks/footer' as *;
