--- a/src/styles/blocks/_image.scss
+++ b/src/styles/blocks/_image.scss
@@ -1,4 +1,4 @@
-@use "../utils/mixins" as *;
+@use '../utils/mixins' as *;
 
 .image {
   &__header {
@@ -11,6 +11,9 @@
     border-radius: 8px;
     background-size: contain;
 
-    
+    &:hover {
+      transform: scale(1.07);
+      transition: transform 0.4s ease;
+    }
   }
 }
