--- a/src/styles/blocks/_text.scss
+++ b/src/styles/blocks/_text.scss
@@ -25,4 +25,19 @@
     line-height: 150%;
     letter-spacing: -1%;
   }
+
+  &__about-us {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: -1%;
+
+    &--numbers {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 150%;
+      letter-spacing: -1%;
+      color: #7f8096;
+    }
+  }
 }
