--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -23,6 +23,34 @@
     line-height: 100%;
     letter-spacing: 2%;
     text-transform: uppercase;
-    color: #7F8096;
+    color: #7f8096;
   }
+
+  &__about-us {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 85%;
+    letter-spacing: -5%;
+    text-transform: uppercase;
+
+    &--numbers {
+      font-weight: 400;
+      font-size: 96px;
+      line-height: 85%;
+      letter-spacing: -5%;
+      text-transform: uppercase;
+    }
+  }
+  &__contact-us {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 85%;
+    letter-spacing: -5%;
+    text-transform: uppercase;
+    color: #fff;
+  }
+}
+
+.title:not(.title__product):hover {
+  color: #f9512e;
 }
