--- a/src/styles/blocks/_links.scss
+++ b/src/styles/blocks/_links.scss
@@ -28,4 +28,39 @@
       color: #f9512e;
     }
   }
+
+  &__footer {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    &--title {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 100%;
+      letter-spacing: 2%;
+      text-transform: uppercase;
+      color: #7f8096;
+    }
+
+    &--ul {
+      display: flex;
+      flex-direction: column;
+      gap: 16px; // mniejszy odstęp dla estetyki
+      list-style: none;
+    }
+
+    &--link {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 150%;
+      letter-spacing: -1%;
+      color: #fff;
+      text-align: left;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
