--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@
 @use './styles/blocks/title' as *;
 @use './styles/blocks/image' as *;
 @use './styles/blocks/button' as *;
+@use './styles/blocks/media' as *;
 
 // navigation
 @use './styles/blocks/navigation' as *;
