--- a/src/styles/blocks/_links.scss
+++ b/src/styles/blocks/_links.scss
@@ -41,6 +41,7 @@
       letter-spacing: 2%;
       text-transform: uppercase;
       color: #7f8096;
+      white-space: nowrap;
     }
 
     &--ul {
