--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -16,7 +16,7 @@
 
   &__container {
     @include grid;
-    
+
     box-sizing: border-box;
     gap: 40px;
     justify-content: center;
@@ -32,6 +32,10 @@
     }
 
     &--title {
+      grid-column: 1/3;
+    }
+
+    &--media {
       grid-column: 1/3;
     }
   }
