--- a/src/styles/blocks/_image.scss
+++ b/src/styles/blocks/_image.scss
@@ -11,6 +11,11 @@
     border-radius: 8px;
     background-size: contain;
 
+    @include for-tablet {
+      width: 328px;
+      height: 424px;
+    }
+
     &:hover {
       transform: scale(1.07);
       transition: transform 0.4s ease;
