--- a/src/styles/blocks/_main.scss
+++ b/src/styles/blocks/_main.scss
@@ -4,18 +4,61 @@
   @include grid;
 
   padding-bottom: 80px;
-  gap: 20px;
   justify-content: center;
 
   &__title {
     grid-column: 1 / -1;
+
+    @include for-tablet {
+      grid-column: 1 / -1;
+    }
   }
 
   &__text {
     grid-column: 1/-1;
+
+    @include for-tablet {
+      grid-column: 1 / -1;
+    }
   }
 
   &__product {
     grid-column: 1/ -1;
+
+    &--1 {
+      @include for-tablet {
+        grid-column: 1/ 5;
+      }
+    }
+
+    &--2 {
+      @include for-tablet {
+        grid-column: 5/ -1;
+      }
+    }
+
+    &--3 {
+      @include for-tablet {
+        grid-column: 1/ 5;
+      }
+    }
+
+    &--4 {
+      @include for-tablet {
+        grid-column: 5/ -1;
+      }
+    }
+
+    &--5 {
+      @include for-tablet {
+        grid-column: 1/ 5;
+      }
+    }
+
+    &--6 {
+      @include for-tablet {
+        grid-column: 5/ -1;
+      }
+    }
   }
 }
