tablet solution ready

--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -1,3 +1,5 @@
+@use '../utils/mixins' as *;
+
 .title {
   &__header {
     font-weight: 400;
@@ -49,6 +51,10 @@
     letter-spacing: -5%;
     text-transform: uppercase;
     color: #fff;
+
+    @include for-tablet {
+      padding-bottom: 30px;
+    }
   }
 }
 
