--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -22,21 +22,71 @@
     justify-content: center;
     margin-left: 16px;
 
+    &--element {
+      @include for-tablet {
+        margin-bottom: 10px;
+      }
+    }
+
     &--logo {
       grid-column: 1/-1;
       margin-left: 5px;
-    }
 
-    &--links {
-      grid-column: 1/3;
+      @include for-tablet {
+        grid-column: 1/5;
+        grid-row: 1;
+      }
     }
 
     &--title {
       grid-column: 1/3;
+
+      @include for-tablet {
+        grid-column: 5/-1;
+        grid-row: 1;
+      }
+    }
+
+    &--links {
+      grid-column: 1/3;
+      &1 {
+        @include for-tablet {
+          grid-column: 1/5;
+          grid-row: 2;
+        }
+      }
+
+      &2 {
+        @include for-tablet {
+          grid-column: 5/-1;
+          grid-row: 2;
+        }
+      }
+
+      &3 {
+        @include for-tablet {
+          grid-column: 5/-1;
+          grid-row: 3;
+        }
+      }
     }
 
     &--media {
       grid-column: 1/3;
+
+      @include for-tablet {
+        grid-column: 1/5;
+        grid-row: 5;
+        display: flex;
+        align-items: end;
+      }
+    }
+
+    &--signature {
+      grid-column: 5/-1;
+      grid-row: 5;
+      display: flex;
+      align-items: end;
     }
   }
 }
