tablet solution ready+

--- a/src/styles/blocks/_media.scss
+++ b/src/styles/blocks/_media.scss
@@ -7,4 +7,12 @@
   @include for-tablet {
     margin-top: 40px;
   }
+
+  &__social-icon {
+    height: 20px;
+    &:hover {
+      transform: scale(1.25);
+      transition: transform 0.4s ease;
+    }
+  }
 }
