--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@
 
 // header
 @use './styles/blocks/header' as *;
+@use './styles/blocks/navigation-menu' as *;
 
 // menu
 @use './styles/blocks/menu' as *;
