--- a/src/styles/blocks/_navigation-burger.scss
+++ b/src/styles/blocks/_navigation-burger.scss
@@ -1,3 +1,5 @@
+@use "../utils/mixins" as *;
+
 .navigation-burger {
   height: 24px;
   width: 24px;
@@ -9,5 +11,9 @@
     height: 8px;
     background-image: url(/src/images/logos/Menu-icon.svg);
     background-repeat: no-repeat;
+  }
+
+  @include for-desktop {
+    display: none;
   }
 }
