--- a/src/styles/blocks/_image.scss
+++ b/src/styles/blocks/_image.scss
@@ -3,6 +3,11 @@
 .image {
   &__header {
     justify-self: center;
+
+    @include for-desktop {
+      width: 544px;
+      height: 546px;
+    }
   }
 
   &__main {
