--- a/src/styles/blocks/_text.scss
+++ b/src/styles/blocks/_text.scss
@@ -1,3 +1,5 @@
+@use "../utils/mixins" as *;
+
 .text {
   &__header {
     font-weight: 400;
@@ -6,6 +8,11 @@
     letter-spacing: -1%;
     text-align: center;
     padding-top: 32px;
+
+    @include for-desktop {
+      text-align: start;
+      padding-top: 200px;
+    }
   }
 
   &__main {
