--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -9,6 +9,14 @@
     text-align: center;
     text-transform: uppercase;
     padding-top: 32px;
+
+    @include for-desktop {
+      font-size: 130px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    
+    }
   }
 
   &__main {
