--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -1,4 +1,5 @@
 @use '../utils/vars' as *;
+@use "../utils/mixins" as *;
 
 .button {
   &__header {
@@ -10,6 +11,10 @@
     display: flex;
     justify-self: center;
     align-items: center;
+
+    @include for-desktop {
+      justify-self: start;
+    }
 
     &--icon {
       width: 24px;
