--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -7,11 +7,19 @@
   justify-content: center;
   padding-bottom: 160px;
 
+  @include for-desktop {
+    padding-bottom: 360px;
+  }
+
   &__text {
     grid-column: 1/ -1;
 
     @include for-tablet {
       grid-column: 1 /5;
+    }
+
+    @include for-desktop {
+      grid-column: 1/3;
     }
   }
 
@@ -21,6 +29,11 @@
     @include for-tablet {
       grid-column: 1 /9;
       padding-top: 130px;
+    }
+
+    @include for-desktop {
+      grid-column: 1/9;
+      padding-top: 10px;
     }
   }
 
@@ -40,6 +53,11 @@
     @include for-tablet {
       grid-column: 1 /9;
       margin-top: 160px;
+    }
+
+    @include for-desktop {
+      grid-column: 1 /4;
+      margin-top: 70px;
     }
   }
 }
