main deskop ready

--- a/src/styles/blocks/_image.scss
+++ b/src/styles/blocks/_image.scss
@@ -21,6 +21,12 @@
       height: 424px;
     }
 
+    @include for-desktop {
+      width: 402px;
+      height: 512px;
+      border-radius: 8px;
+    }
+
     &:hover {
       transform: scale(1.05);
       transition: transform 0.4s ease;
