--- a/src/styles/blocks/_main.scss
+++ b/src/styles/blocks/_main.scss
@@ -29,11 +29,19 @@
       @include for-tablet {
         grid-column: 1/ 5;
       }
+
+      @include for-desktop {
+        grid-column: 1/ 4;
+      }
     }
 
     &--2 {
       @include for-tablet {
         grid-column: 5/ -1;
+      }
+
+      @include for-desktop {
+        grid-column: 4/7;
       }
     }
 
@@ -41,11 +49,19 @@
       @include for-tablet {
         grid-column: 1/ 5;
       }
+
+      @include for-desktop {
+        grid-column: 3/6;
+      }
     }
 
     &--4 {
       @include for-tablet {
         grid-column: 5/ -1;
+      }
+
+      @include for-desktop {
+        grid-column: 6/-1;
       }
     }
 
@@ -53,11 +69,19 @@
       @include for-tablet {
         grid-column: 1/ 5;
       }
+
+      @include for-desktop {
+        grid-column: 1/ 4;
+      }
     }
 
     &--6 {
       @include for-tablet {
         grid-column: 5/ -1;
+      }
+
+      @include for-desktop {
+        grid-column: 4/7;
       }
     }
   }
