--- a/src/styles/blocks/_products.scss
+++ b/src/styles/blocks/_products.scss
@@ -1,8 +1,14 @@
+@use '../utils/mixins' as *;
+
 .product {
   display: flex;
   flex-direction: column;
   gap: 15px;
   padding-top: 30px;
+
+  @include for-desktop {
+    padding-top: 60px;
+  }
 
   &__title {
     text-align: start;
