--- a/src/styles/blocks/_section-about-us.scss
+++ b/src/styles/blocks/_section-about-us.scss
@@ -8,10 +8,18 @@
   padding-bottom: 80px;
   position: relative;
 
+  @include for-desktop {
+    padding-bottom: 280px;
+  }
+
   &__title {
     grid-column: 1/-1;
 
     @include for-tablet {
+      grid-column: 1/5;
+    }
+
+    @include for-desktop {
       grid-column: 1/5;
     }
   }
@@ -20,6 +28,10 @@
     grid-column: 1/-1;
 
     @include for-tablet {
+      grid-column: 5/ -1;
+    }
+
+    @include for-desktop {
       grid-column: 5/ -1;
     }
   }
@@ -39,11 +51,19 @@
       @include for-tablet {
         grid-column: 1/5;
       }
+
+      @include for-desktop {
+        grid-column: 1/3;
+      }
     }
 
     &--stories {
       @include for-tablet {
         grid-column: 5/-1;
+      }
+
+      @include for-desktop {
+        grid-column: 3/5;
       }
     }
 
@@ -51,11 +71,19 @@
       @include for-tablet {
         grid-column: 1/5;
       }
+
+      @include for-desktop {
+        grid-column: 5/7;
+      }
     }
 
     &--clients {
       @include for-tablet {
         grid-column: 5/-1;
+      }
+
+      @include for-desktop {
+        grid-column: 7/-1;
       }
     }
   }
