--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -15,7 +15,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-    
+
     }
   }
 
@@ -43,6 +43,10 @@
     line-height: 85%;
     letter-spacing: -5%;
     text-transform: uppercase;
+
+    @include for-desktop {
+      font-size: 72px;
+    }
 
     &--numbers {
       font-weight: 400;
