desktop footer ready

--- a/src/styles/blocks/_media.scss
+++ b/src/styles/blocks/_media.scss
@@ -10,9 +10,11 @@
 
   &__social-icon {
     height: 20px;
-    &:hover {
+    &:hover,
+    &:focus {
       transform: scale(1.25);
       transition: transform 0.4s ease;
+      filter: brightness(0) invert(1);
     }
   }
 }
