--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -36,14 +36,26 @@
         grid-column: 1/5;
         grid-row: 1;
       }
+
+      @include for-desktop {
+        grid-column: 1/2;
+        grid-row: 1;
+      }
     }
 
     &--title {
       grid-column: 1/3;
+      white-space: normal;
 
       @include for-tablet {
         grid-column: 5/-1;
         grid-row: 1;
+      }
+
+      @include for-desktop {
+        grid-column: 5/9;
+        grid-row: 1;
+        white-space: nowrap; // ignoruje <br>, tekst w jednej linii
       }
     }
 
@@ -54,11 +66,21 @@
           grid-column: 1/5;
           grid-row: 2;
         }
+
+        @include for-desktop {
+          grid-column: 1/2;
+          grid-row: 2;
+        }
       }
 
       &2 {
         @include for-tablet {
           grid-column: 5/-1;
+          grid-row: 2;
+        }
+
+        @include for-desktop {
+          grid-column: 5/6;
           grid-row: 2;
         }
       }
@@ -67,6 +89,11 @@
         @include for-tablet {
           grid-column: 5/-1;
           grid-row: 3;
+        }
+
+        @include for-desktop {
+          grid-column: 7/-1;
+          grid-row: 2;
         }
       }
     }
@@ -80,6 +107,11 @@
         display: flex;
         align-items: end;
       }
+
+      @include for-desktop {
+        grid-column: 1/2;
+        grid-row: 3;
+      }
     }
 
     &--signature {
@@ -87,6 +119,11 @@
       grid-row: 5;
       display: flex;
       align-items: end;
+
+      @include for-desktop {
+        grid-column: 5/6;
+        grid-row: 3;
+      }
     }
   }
 }
