--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -15,7 +15,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
     }
   }
 
@@ -57,6 +56,7 @@
     }
   }
   &__contact-us {
+    width: 280px;
     font-weight: 400;
     font-size: 48px;
     line-height: 85%;
@@ -66,6 +66,12 @@
 
     @include for-tablet {
       padding-bottom: 30px;
+    }
+
+    @include for-desktop {
+      font-size: 72px;
+      width: 540px;
+      white-space: nowrap;
     }
   }
 }
