full page and solution ready

--- a/src/styles/blocks/_body.scss
+++ b/src/styles/blocks/_body.scss
@@ -1,16 +1,11 @@
 @use '../utils/vars' as *;
 @use '../utils/mixins' as *;
 
-html {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 body {
   font-family: Roboto, Arial, Helvetica, sans-serif;
   width: 100vw;
   min-height: 100vh;
   padding-top: 64px;
 
+  scroll-behavior: smooth;
 }
