--- a/src/styles/blocks/_navigation-menu.scss
+++ b/src/styles/blocks/_navigation-menu.scss
@@ -16,7 +16,7 @@
     line-height: 100%;
     letter-spacing: 2%;
     text-transform: uppercase;
-    color: #F9512E;
+    color: #f9512e;
   }
 
   @include for-desktop {
