--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@
 @use './styles/blocks/image' as *;
 @use './styles/blocks/button' as *;
 @use './styles/blocks/media' as *;
+@use './styles/blocks/logo' as *;
 
 // navigation
 @use './styles/blocks/navigation' as *;
