--- a/src/styles/blocks/vars.scss
+++ b/src/styles/blocks/vars.scss
@@ -2,6 +2,6 @@ $page-background: #ffeefc;
 $main-white: #fff;
 $text-color: #1c1a26;
 $text-grey: #7f8096;
-$main-red: rgb(249, 81, 46);
+$main-red: #f9512e;
 $focused-button-color: #b2341a;
 $disabled-button-color: #fba28f;
