--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
 $c-gray: #eee;
+$c-black: #1c1a26;
+$c-orange: #f9512e;
+$c-darkGray: #7f8096;
+$c-white: #fff;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
