--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import 'utils';
-@import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'blocks/page';
+@import 'blocks/top-bar';
+@import 'blocks/menu';
+@import 'blocks/header';
+@import 'blocks/nav';
+@import 'blocks/main';
+@import 'blocks/product';
+@import 'blocks/about';
+@import 'blocks/footer';
