--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,66 @@
 %h1 {
-  font-family: Roboto, sans-serif;
+  font-family: Inter, sans-serif;
+  font-size: 64px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 85%;
+  color: $c-orange;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+
+  @include on-tablet {
+    font-size: 80px;
+    font-weight: 400;
+  }
+
+  @include on-desktop {
+    font-size: 144px;
+  }
+}
+
+%h3 {
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 100%;
+  text-transform: uppercase;
+  letter-spacing: 2%;
+}
+
+%h2 {
+  font-family: Inter, sans-serif;
+  font-size: 48px;
   font-weight: 400;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -5%;
+
+  @include on-tablet {
+    font-size: 56px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+  }
+}
+
+%p {
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 150%;
+  color: $c-black;
+  text-align: center;
+  letter-spacing: -0.01em;
+}
+
+%number {
+  font-family: Inter, sans-serif;
+  font-size: 96px;
+  font-weight: 400;
+  line-height: 85%;
+  color: $c-orange;
+  text-transform: uppercase;
+  letter-spacing: -5%;
 }
