--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,9 @@
-%h1 {
-  font-family: Roboto, sans-serif;
+%inter-400 {
+  font-family: Inter-Regular, sans-serif;
   font-weight: 400;
+}
+
+%inter-500 {
+  font-family: Inter-Medium, sans-serif;
+  font-weight: 500;
 }
