--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$max-desktop-width: 1200px;
+$max-tablet-width: 800px;
+$max-phone-width: 500px;
+$main-color: #1c1a26;
+$accent-color: #f9512e;
+$footer-subtitle: #7f8096;
