--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,10 @@
+@import 'reset';
 @import 'utils';
 @import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'global';
+@import 'blocks/header';
+@import 'blocks/top-bar';
+@import 'blocks/menu';
+@import 'blocks/products';
+@import 'blocks/about';
+@import 'blocks/footer';
