--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -11,6 +11,10 @@
   transition: transform, 0.3s;
   transform: translateX(-100%);
 
+  @include on-desktop {
+    display: none;
+  }
+
   &:target {
     opacity: 1;
     pointer-events: all;
