--- a/src/styles/blocks/nav-menu.scss
+++ b/src/styles/blocks/nav-menu.scss
@@ -23,7 +23,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: -1%;
+    letter-spacing: -0.16px;
     text-align: center;
   }
 
@@ -33,7 +33,7 @@
     gap: 4px;
     font-weight: 500;
     line-height: 100%;
-    letter-spacing: 2%;
+    letter-spacing: 0.32px;
     color: #F9512E;
     text-transform: uppercase;
   }
