--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,7 +3,10 @@
   overflow-x: hidden;
   font-family: Inter, Arial, sans-serif;
 
+
   &__body {
+    overflow: hidden;
+    box-sizing: border-box;
     margin: 0;
     min-width: 320px;
     background-color: #FFEEFC;
