--- a/src/styles/blocks/blog.scss
+++ b/src/styles/blocks/blog.scss
@@ -2,4 +2,15 @@
   display: flex;
   gap: 32px;
   grid-column: 1 / 2;
+  padding-top: 40px;
+
+  @include on-tablet {
+    padding-top: 48px;
+    grid-column: 1 / 3;
+    grid-row: 4;
+  }
+
+  @include on-desktop {
+    grid-column: 1 / 3;
+  }
 }
