--- a/src/styles/blocks/call.scss
+++ b/src/styles/blocks/call.scss
@@ -3,12 +3,22 @@
   flex-direction: column;
   gap: 16px;
   grid-column: 1 / 2;
+  padding-top: 40px;
+
+  @include on-tablet {
+    grid-column: 5 / 7;
+    grid-row: 2;
+  }
+
+  @include on-desktop {
+    grid-column: 5 / 6;
+  }
 
   &__name {
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    letter-spacing: 2%;
+    letter-spacing: 0.32px;
     text-transform: uppercase;
     color: #7F8096;
   }
@@ -18,7 +28,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: -1%;
+    letter-spacing: -0.16px;
     color: #FFF;
   }
 }
