--- a/src/styles/blocks/email.scss
+++ b/src/styles/blocks/email.scss
@@ -3,13 +3,26 @@
   flex-direction: column;
   gap: 16px;
   grid-column: 1 / 2;
+  padding-top: 40px;
+
+  @include on-tablet {
+    padding-top: 0;
+    grid-column: 5 / 7;
+    grid-row: 3;
+  }
+
+  @include on-desktop {
+    padding-top: 40px;
+    grid-column: 7 / -1;
+    grid-row: 2;
+  }
 
   &__name {
     margin: 0;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    letter-spacing: 2%;
+    letter-spacing: 0.32px;
     text-transform: uppercase;
     color: #7F8096;
   }
@@ -19,7 +32,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: -1%;
+    letter-spacing: -0.16px;
     color: #FFF;
   }
 }
