--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,11 +1,13 @@
 .header {
+  @include on-desktop {
+    display: none;
+  }
   &__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 16px;
   }
-
   &__logo {
     width: 132px;
     height: 32px;
