--- a/src/styles/blocks/home-page.scss
+++ b/src/styles/blocks/home-page.scss
@@ -4,10 +4,26 @@
     display: grid;
     column-gap: 16px;
     max-width: 288px;
+    min-width: 288px;
     padding-inline: 16px;
-    padding-bottom: 64px;
+    padding-bottom: 40px;
     margin-inline: auto;
     grid-template-columns: repeat(2, 1fr);
+
+    @include on-tablet {
+      max-width: 680px;
+      min-width: 680px;
+      column-gap: 24px;
+      padding-inline: 44px;
+      grid-template-columns: repeat(8, 1fr);
+      padding-bottom: 228px;
+    }
+
+    @include on-desktop {
+      max-width: 1112px;
+      min-width: 1112px;
+      padding-bottom: 152px;
+    }
   }
 
   &__text {
@@ -19,11 +35,26 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: -1%;
+    letter-spacing: -0.16px;
+
+    @include on-tablet {
+      padding-top: 80px;
+      padding-bottom: 16px;
+      text-align: left;
+      grid-column: span 4;
+    }
+
+    @include on-desktop {
+      padding-top: 135px;
+      grid-column: 1 / 3;
+      grid-row: 1;
+      padding-bottom: 0;
+      height: fit-content;
+    }
   }
 
   &__title {
-    grid-column: span 2;
+    grid-column: span 3;
     margin: 0;
     text-align: center;
     text-transform: uppercase;
@@ -32,13 +63,42 @@
     font-weight: 400;
     font-size: 64px;
     line-height: 85%;
-    letter-spacing: -5%;
+    letter-spacing: -3.2px;
+
+    @include on-tablet {
+      grid-column: span 8;
+      position: absolute;
+      font-size: 80px;
+      letter-spacing: -4px;
+      top: 338px;
+      min-width: 680px;
+    }
+
+    @include on-desktop {
+      min-width: 1112px;
+      font-size: 136px;
+      letter-spacing: -6.8px;
+      top: 316px;
+    }
   }
 
   &__image {
     width: 288px;
     height: 290px;
     grid-column: span 2;
+
+    @include on-tablet {
+      width: 326px;
+      height: 328px;
+      grid-column: 3 / 7;
+      padding-bottom: 80px;
+    }
+
+    @include on-desktop {
+      width: 544px;
+      height: 546px;
+      padding-bottom: 66px;
+    }
   }
 
   &__button {
@@ -52,7 +112,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    letter-spacing: 2%;
+    letter-spacing: 0.32px;
     color: #F9512E;
     text-decoration: none;
     text-transform: uppercase;
@@ -61,6 +121,19 @@
     border: 2px solid #F9512E;
     background-color: #FFEEFC;
     cursor: pointer;
+
+    @include on-tablet {
+      width: 326px;
+      grid-column: 3 / 7;
+    }
+
+    @include on-desktop {
+      position: absolute;
+      top: 483px;
+      width: 260px;
+      grid-column: 1 / 3;
+      grid-row: 1;
+    }
 
     &:hover {
       background-color: #F9512E;
