--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,9 +1,25 @@
 .main {
   &__content {
+    min-width: 288px;
     max-width: 288px;
     padding-inline: 16px;
     margin-inline: auto;
     padding-top: 64px;
     padding-bottom: 72px;
+
+
+    @include on-tablet {
+      min-width: 680px;
+      max-width: 680px;
+      padding-top: 0;
+      padding-bottom: 152px;
+      padding-inline: 44px;
+    }
+
+    @include on-desktop {
+      min-width: 1112px;
+      max-width: 1112px;
+      padding-bottom: 349px;
+    }
   }
 }
