--- a/src/styles/blocks/nav-footer.scss
+++ b/src/styles/blocks/nav-footer.scss
@@ -1,6 +1,5 @@
 .nav-footer {
-  grid-column: 1 / 2;
-  
+
   &__list {
     padding: 0;
     margin: 0;
@@ -15,7 +14,7 @@
     font-size: 16px;
     text-transform: uppercase;
     line-height: 100%;
-    letter-spacing: 2%;
+    letter-spacing: 0.32px;
     color: #7F8096;
   }
 
@@ -24,7 +23,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: -1%;
+    letter-spacing: -0.16px;
     color: #FFF;
   }
 }
