--- a/src/styles/blocks/privacy.scss
+++ b/src/styles/blocks/privacy.scss
@@ -1,12 +1,19 @@
 .privacy {
   grid-column: 1 / 2;
+  padding-top: 40px;
+
+  @include on-tablet {
+    padding-top: 48px;
+    grid-column: 5 / 7;
+    grid-row: 4;
+  }
 
   &__link {
     text-decoration: none;
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: -1%;
+    letter-spacing: -0.16px;
     color: #7F8096;
   }
 }
