--- a/src/styles/blocks/stats.scss
+++ b/src/styles/blocks/stats.scss
@@ -1,11 +1,16 @@
 .stats {
-  position: relative;
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 16px;
   row-gap: 48px;
   grid-column: 1 / -1;
+
+  @include on-tablet {
+    grid-template-columns: repeat(8, 1fr);
+    column-gap: 24px;
+    row-gap: 80px;
+  }
 
   &__block {
     display: flex;
@@ -18,7 +23,7 @@
     font-weight: 400;
     font-size: 96px;
     line-height: 85%;
-    letter-spacing: -5%;
+    letter-spacing: -4.8px;
     text-transform: uppercase;
     color: #F9512E;
   }
@@ -27,7 +32,47 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: -1%;
+    letter-spacing: -0.16px;
     color: #1C1A26;
+  }
+
+  &__block-year {
+    @include on-tablet {
+      grid-column: 1 / 4;
+    }
+
+    @include on-desktop {
+      grid-column: 1 / 3;
+    }
+  }
+
+  &__block-stores {
+    @include on-tablet {
+      grid-column: 5 / 7;
+    }
+
+    @include on-desktop {
+      grid-column: 3 / 4;
+    }
+  }
+
+  &__block-companies {
+    @include on-tablet {
+      grid-column: 1 / 3;
+    }
+
+    @include on-desktop {
+      grid-column: 5 / 7;
+    }
+  }
+
+  &__block-clients {
+    @include on-tablet {
+      grid-column: 5 / 8;
+    }
+
+    @include on-desktop {
+      grid-column: 7 / -1;
+    }
   }
 }
