--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,9 @@
+@import 'utils/variables';
+@import 'utils/mixins';
 @import 'blocks/page';
 @import 'blocks/home-page';
 @import 'blocks/header';
+@import 'blocks/header-desktop';
 @import 'blocks/nav';
 @import 'blocks/nav-menu';
 @import 'blocks/icon';
